<resources>
    <string name="app_name">Healthlarm</string>
    <string name="logoDescription">Imagen del logo</string>
    <string name="fondoDescription">Imagen del fondo</string>
    <string name="iniciarBtn">Iniciar</string>
    <string name="tituloAlarmasConfiguradas">Alarmas configuradas</string>
    <string name="tituloAlarmasConfiguradasHint">Alarmas configuradas</string>
    <string name="noHayAlarmas">No hay alarmas</string>
    <string name="noHayAlarmasHint">No hay alarmas</string>
    <string name="agregarAlarmaBtn">Agregar alarma</string>
    <string name="tituloNuevaAlarma">Nueva alarma</string>
    <string name="tituloEditarAlarma">Editar alarma</string>
    <string name="nombreAlarma">NOMBRE:</string>
    <string name="nombreAlarmaEjemplo">Ejemplo: Advil Max</string>
    <string name="dosisAlarma">DOSIS:</string>
    <string name="dosisAlarmaEjemplo">Ejemplo: 400 mg</string>
    <string name="fechaInicioAlarma">FECHA INICIO:</string>
    <string name="fechaInicioAlarmaEjemplo">dd/mm/yyyy</string>
    <string name="horaInicialAlarma">HORA INICIAL:</string>
    <string name="horaInicialAlarmaEjemplo">Ejemplo: 02:00 PM</string>
    <string name="categoriaAlarma">CATEGORÍA:</string>
    <string name="categoriaAlarmaEjemplo">Ejemplos: Pastillas / Analgésicos</string>
    <string name="medicamentosRestantesAlarma">MEDICAMENTOS RESTANTES:</string>
    <string name="medicamentosRestantesAlarmaEjemplo">Número de medicamentos restantes</string>
    <string name="recordatorioCompraAlarma">RECORDATORIO DE COMPRA:</string>
    <string name="recordatorioCompraAlarmaEjemplo">Número de medicamentos para recompra</string>
    <string name="guardarBtn">Guardar</string>
    <string name="cancelarBtn">Cancelar</string>
    <string name="nombrePeriodicidad">PERIODICIDAD:</string>
    <string name="fechaFin">Fecha fin</string>
    <string name="horaAlarma">02:00 PM</string>
    <string name="siBtn">Si</string>
    <string name="noBtn">No</string>
    <string name="deleteMensaje">¿Está seguro de que quiere eliminar la alarma de Acetaminofén a las 08:00 AM?</string>
    <string name="deleteTitulo">ELIMINAR ALARMA</string>
    <string name="editarBtn">Editar</string>
</resources>