<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completa"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fondoAlarmasConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fondoDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tituloalarmasconfiguradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:autofillHints="name"
            android:ems="10"
            android:fontFamily="@font/magra_regular"
            android:gravity="center"
            android:hint="@string/tituloAlarmasConfiguradasHint"
            android:inputType="text"
            android:text="@string/tituloAlarmasConfiguradas"
            android:textColor="@color/rojo100"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noHayAlarmas"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="noAlarms"
            android:contentDescription="@string/noHayAlarmas"
            android:ems="10"
            android:fontFamily="@font/magra_regular"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/noHayAlarmas"
            android:textColor="@color/rojo60"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/agregarAlarmaBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/agregarAlarmaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/agregarAlarmaBtn"
            android:src="@drawable/agregar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>