<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completa"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fondoAlarmasConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fondoDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tituloalarmasconfiguradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:autofillHints="name"
            android:contentDescription="@string/tituloAlarmasConfiguradasHint"
            android:ems="10"
            android:fontFamily="@font/magra_regular"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/tituloAlarmasConfiguradas"
            android:textColor="@color/rojo100"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloalarmasconfiguradas">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaAlarmaId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:enabled="false"
                android:hint="@string/horaAlarma"
                app:boxStrokeColor="@color/negro100"
                app:hintTextColor="@color/negro100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fechaInicioId2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fechaInicioAlarma"
                    android:fontFamily="@font/magra_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/editarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/horaAlarma"
                android:src="@drawable/editar" />

            <ImageButton
                android:id="@+id/eliminarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/horaAlarma"
                android:src="@drawable/eliminar" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/agregarAlarmaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/agregarAlarmaBtn"
            android:src="@drawable/agregar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>